<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vibrant_gradient"
    android:fadingEdgeLength="32dp"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_height"
            android:layout_gravity="center"
            android:elevation="12dp"
            android:outlineProvider="bounds">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/poster_background"
                android:contentDescription="@string/movie_poster_desc"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_gravity="bottom"
                android:background="@drawable/poster_shadow" />
        </FrameLayout>


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:ellipsize="end"
            android:fontFamily="poppins_bold"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="@dimen/title_line_spacing"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            app:autoSizeTextType="uniform" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="@dimen/icon_padding"
                android:drawableTint="@color/text_secondary"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/metadata_text_size" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:gravity="center_vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/DribbbleRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="3.5"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:background="@drawable/rating_pill"
                    android:paddingHorizontal="@dimen/rating_pill_padding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/rating_text_size" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/body_text_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/medium_margin">

            <com.google.android.material.button.MaterialButton
                style="@style/DribbbleActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/watch_trailer"
                app:icon="@drawable/ic_play" />

            <com.google.android.material.button.MaterialButton
                style="@style/DribbbleActionButton.Outline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_weight="1"
                android:text="@string/add_to_list"
                app:icon="@drawable/ic_add" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>